[gd_scene load_steps=6 format=2]

[ext_resource path="res://Sprite.gd" type="Script" id=1]
[ext_resource path="res://player_sheet.png" type="Texture" id=2]
[ext_resource path="res://player.gd" type="Script" id=3]
[ext_resource path="res://pfft.wav" type="AudioStream" id=4]
[ext_resource path="res://grow.wav" type="AudioStream" id=5]

[node name="player" type="Spatial"]
script = ExtResource( 3 )

[node name="cameraTarget" type="Spatial" parent="."]

[node name="headSprite" type="Sprite3D" parent="."]
pixel_size = 0.0625
texture = ExtResource( 2 )
hframes = 4
vframes = 5
script = ExtResource( 1 )

[node name="PfftSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -25.0

[node name="GrowSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -10.0
